# ticketing-support-system

./: .dockerignore  .gitignore  README.md  download.py  main.py  notebook.ipynb  pyproject.toml  requirements.txt
configs/: logging.ini
src/utils/: logger.py
