[project]
name = "ticketing-support-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aspose-words>=25.9.0",
    "black>=25.1.0",
    "chromadb>=1.0.20",
    "dotenv>=0.9.9",
    "flanker>=0.9.11",
    "huggingface-hub>=0.34.4",
    "imaplib2>=3.6",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "llama-index>=0.12.52",
    "load-dotenv>=0.1.0",
    "logging>=0.4.9.6",
    "openai>=1.107.0",
    "pandas>=2.3.2",
    "pathlib>=1.0.1",
    "pydantic>=2.11.7",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.0",
    "streamlit>=1.49.1",
]
