[project]
name = "ticketing-support-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=25.1.0",
    "chromadb>=1.0.21",
    "dash>=3.2.0",
    "huggingface-hub>=0.34.4",
    "imaplib2>=3.6",
    "langchain>=0.3.27",
    "llama-index>=0.12.52",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pydantic>=2.11.7",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
]
